--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
-spring:
+#AWS
 
- cloud:
-   aws:
-     region:
-       auto: false
-       static: us-east-1
+cloud:
+ aws:
+   region:
+     auto: false
+     static: us-east-1
