--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
 	</properties>
 
 	<dependencies>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+        
 		<!--<dependency>-->
 			<!--<groupId>org.springframework.boot</groupId>-->
 			<!--<artifactId>spring-boot-starter-data-elasticsearch</artifactId>-->
