--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,6 @@ cloud:
    region:
      auto: false
      static: us-east-1
+
+google:
+  base-url: https://www.googleapis.com/customsearch/v1?[parameters]
