--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,4 +7,6 @@ cloud:
      static: us-east-1
 
 google:
-  base-url: https://www.googleapis.com/customsearch/v1?[parameters]
+  base-url: https://www.googleapis.com/customsearch/v1?
+  search-engine:
+  key:
